--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "4.18.2",
     "express-fileupload": "^1.4.0",
     "module-alias": "2.2.2",
+    "short-uuid": "^4.2.2",
     "stream": "^0.0.2",
     "uuid": "^9.0.0"
   }
