--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@src/*": ["src/*"],
       "@modules/*": ["modules/*"],
       "@middlewares/*": ["middlewares/*"],
+      "@config/*": ["config/*"],
     },
 
     /* Emit */
