--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/module-alias": "2.0.1",
@@ -31,6 +32,7 @@
     "@aws-sdk/s3-request-presigner": "^3.348.0",
     "@prisma/client": "^4.15.0",
     "@types/multer-s3": "3.0.0",
+    "cors": "^2.8.5",
     "dotenv": "16.1.0",
     "express": "4.18.2",
     "express-fileupload": "^1.4.0",
