--- a/FRONTEND/.eslintrc.json
+++ b/FRONTEND/.eslintrc.json
@@ -2,15 +2,15 @@
   "env": {
     "browser": true,
     "es2021": true
-  }, 
+  },
   "extends": [
+    "eslint:recommended",
     "plugin:vue/vue3-recommended",
-    "@vue/typescript/recommended",
-    "@vue/eslint-config-stardard-with-typescript"
+    "prettier",
+    "standard-with-typescript",
+    "plugin:prettier/recommended"
   ],
-  "plugins": [
-    "vue"
-  ],
+  "plugins": ["vue"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
