--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.32.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-toastify": "^0.1.12"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
