--- a/FRONTEND/tsconfig.json
+++ b/FRONTEND/tsconfig.json
@@ -10,7 +10,9 @@
       "@components/*": ["./src/components/*"],
       "@views/*": ["./src/views/*"],
       "@assets/*": ["./src/assets/*"],
-      "@router/*": ["./src/router/*"]
+      "@router/*": ["./src/router/*"],
+      "@services/*": ["./src/services/*"],
+      "@models/*": ["./src/models/*"]
       // "@store/*": ["./src/store/*"],
     },
 
