--- a/FRONTEND/.eslintrc.json
+++ b/FRONTEND/.eslintrc.json
@@ -8,11 +8,12 @@
     "plugin:vue/vue3-recommended",
     "prettier",
     "standard-with-typescript",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "@vue/eslint-config-typescript"
   ],
   "plugins": ["vue"],
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.eslint.json"
   },
   "rules": {}
 }
