--- a/FRONTEND/.gitignore
+++ b/FRONTEND/.gitignore
@@ -1,4 +1,6 @@
 .env
+package-lock.json
+yarn.lock
 
 # Logs
 logs
@@ -15,8 +17,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
