Add peacock color

--- a/FRONTEND/.vscode/settings.json
+++ b/FRONTEND/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "nuxt.isNuxtApp": false,
+  "editor.formatOnSave": false,
+  "peacock.color": "#42b883",
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#65c89b",
     "activityBar.background": "#65c89b",
@@ -22,6 +24,5 @@
     "titleBar.inactiveBackground": "#42b88399",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "editor.formatOnSave": false,
-  "peacock.color": "#42b883"
+  "peacock.remoteColor": "#42b883"
 }
