Add file list table from database in frontend

--- a/FRONTEND/tsconfig.json
+++ b/FRONTEND/tsconfig.json
@@ -12,7 +12,9 @@
       "@assets/*": ["./src/assets/*"],
       "@router/*": ["./src/router/*"],
       "@services/*": ["./src/services/*"],
-      "@models/*": ["./src/models/*"]
+      "@models/*": ["./src/models/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@utils/*": ["./src/utils/*"]
       // "@store/*": ["./src/store/*"],
     },
 
