Include tenant model to getFile Service and order by date desc

--- a/BACKEND/tsconfig.json
+++ b/BACKEND/tsconfig.json
@@ -12,6 +12,7 @@
       "@modules/*": ["modules/*"],
       "@middlewares/*": ["middlewares/*"],
       "@config/*": ["config/*"],
+      "@utils/*": ["utils/*"],
     },
     "typeRoots": ["@types", "node_modules/@types"],
 
