--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -20,9 +20,13 @@
     "@types/express-fileupload": "^1.4.1",
     "@types/module-alias": "2.0.1",
     "@types/node": "20.2.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "prettier-plugin-prisma": "^4.13.0",
     "prisma": "^4.15.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-standard": "12.0.2",
     "tsc-watch": "6.0.4",
     "typescript": "5.0.4"
