Add unique instance of prisma in project

--- a/BACKEND/tsconfig.json
+++ b/BACKEND/tsconfig.json
@@ -10,6 +10,7 @@
     "resolveJsonModule": true,
     "paths": {
       "@config/*": ["config/*"],
+      "@database/*": ["database/*"],
       "@docs/*": ["docs/*"],
       "@middlewares/*": ["middlewares/*"],
       "@modules/*": ["modules/*"],
